--- a/htmlcsscrashcourse.html
+++ b/htmlcsscrashcourse.html
@@ -7,6 +7,7 @@
             <div>
          <p>Hello<strong> ninjas <em>hey</em></strong></p>
          <p>my first<small> ever</small> web page!</p>
+         <a href="https://www.youtube.com/watch?v=mbeT8mpmtHA&list=PL4cUxeGkcC9ivBf_eKCPIAYXWzLlPAm6G&index=3">htmlcrashcourse</a>
         </div>
 
         <div>
@@ -16,11 +17,11 @@
         </div>
 
         <div>
-        <ul>
+        <!-- <ul>
             <li>one</li>
             <li>two</li>
             <li>three</li>
-        </ul>
+        </ul> -->
     </div>
 
     <span>i am a <br>span</span>
