--- a/csssemantics.html
+++ b/csssemantics.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-<link rel="stylesheet" href="stlesheet.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="styles.css">
 <title>Mario Club</title>
     </head>
     <body>
@@ -12,8 +13,8 @@
 
         <section class="banner">
             <img src="img/banner.png" alt="mario club banner">
-        <div>
-            <h2>WELCOME TO <br><span>Mario club</span></h2>
+        <div >
+            <h2>Welcome to <br><span>Mario club</span></h2>
         </div>
         </section>
 
@@ -28,8 +29,10 @@
 
         <main>
             <article>
-                <h2>Its me,Mario</h2>
-                <p>hi thus is an sushma sai mannava yss no u i am me is it no no oh my god fuckk of hey yes god my yoy no babe waasup in</p>
+                <h2>Its Me,Mario</h2>
+                <p>hi thus is an sushma sai mannava yss no u i am me is it no no oh my god fuckk of hey yes god my yoy no babe waasup in
+  A paragraph is a collection of words strung together to make a longer unit than a sentence. Several sentences often make to a paragraph. There are normally three to eight sentences in a paragraph. Paragraphs can start with a five-space indentation or by skipping a line and then starting over.
+                </p>
             </article>
 
             <ul class="images">
@@ -38,8 +41,10 @@
             </ul>
 
             <section class="join">
-                <h2>join today</h2>
-                <p>hii yess no ypu me why how is it possible you yess noo okay hii woww bitchh fuckk myy goddd ohh my god</p>
+                <h2>Join Today</h2>
+                <p>hii yess no ypu me why how is it possible you yess noo okay hii woww bitchh fuckk myy goddd ohh my god
+A paragraph is a collection of words strung together to make a longer unit than a sentence. Several sentences often make to a paragraph. There are normally three to eight sentences in a paragraph. Paragraphs can start with a five-space indentation or by skipping a line and then starting over.
+                </p>
 
                 <form>
                 <input type="email" name="email" placeholder="enter your email" required>
